# tensorrt-benchlab

./: .gitignore  CURL_EXAMPLES.md  Makefile  PROGRESS.md  README.md  claude.md  docker-compose.yml  requirements.txt  setup_dev.sh
.github/workflows/: ci.yml
backend/: Dockerfile  ENGINE_DESIGN.md  METHODOLOGY.md  README.md  README_ENGINES.md  TELEMETRY_METRICS.md  TELEMETRY_QUICKSTART.md  TENSORRT_GUIDE.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_bench.py  routes_metrics.py
backend/app/bench/: methodology.py  runner.py  workloads.py
backend/app/engines/: base.py  tensorrt.py  torch_cpu.py  torch_cuda.py
backend/app/middleware/: metrics.py
backend/app/schemas/: bench.py
backend/app/storage/: results_store.py
backend/app/telemetry/: nvml_sampler.py  prometheus_metrics.py
backend/app/utils/: env.py  timing.py
backend/scripts/: test_api.sh  test_telemetry.sh
backend/tests/: conftest.py  test_engines.py  test_methodology.py  test_schemas.py  test_tensorrt_engine.py
contracts/: README.md  pyproject.toml
contracts/contracts/: __init__.py  schemas.py
contracts/tests/: test_contracts.py
controller/: Dockerfile  pyproject.toml
controller/app/: main.py
controller/app/cli/: __init__.py  report.py
controller/app/db/: database.py  models.py
controller/app/metrics/: __init__.py  controller_metrics.py
controller/app/reports/: __init__.py  generator.py
controller/data/: benchlab.db
docs/: DEPLOY_RUNNER.md  METHODOLOGY.md  METRICS.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BenchmarkControls.css  BenchmarkControls.tsx  ResultsChart.css  ResultsChart.tsx  TelemetryChart.css  TelemetryChart.tsx
frontend/src/pages/: BenchmarkDashboard.css  BenchmarkDashboard.tsx  NewRunPage.tsx  RunDetailPage.tsx  RunListPage.tsx
frontend/src/styles/: NewRunPage.css  RunDetailPage.css  RunListPage.css
runner/: Dockerfile  README.md  pyproject.toml
runner/app/: main.py
runner/app/bench/: methodology.py  runner.py
runner/app/engines/: base.py  tensorrt.py  torch_cpu.py  torch_cuda.py
runner/app/metrics/: __init__.py  runner_metrics.py
runner/app/telemetry/: nvml_sampler.py  run_telemetry.py
runner/app/utils/: env.py  logging_config.py  sanity.py
scripts/: demo.sh
